--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.2",
     "react-line-awesome": "^1.3.2",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
